# chunker

./: .gitignore  README.md  REQUIREMENTS.txt  justfile  pyproject.toml
.sddw/: ARTICLE.md  code-analysis.md
.sddw/agentic_rag/: checkpoint.json  hierarchy.json  index.md
.sddw/chunker/: project_context.md  requirements.md
.sddw/mdstructure/: requirements.md
.sddw/pragm/: checkpoint.json  hierarchy.json  index.md
.sddw/the_pragmatic_programmer/: hierarchy.json  index.md
output/: hierarchy.json  index.md
output/blocks/: group-summary-2.md  group-summary.md  ml-pipeline-overview-2.md  ml-pipeline-overview.md
output/chunks/: -2.md  .md  section-1.md  section-2.md  section-3.md  section-4.md  section-5.md
output/claude_code/: checkpoint.json  hierarchy.json  index.md
output/claude_code_gemma/: checkpoint.json  hierarchy.json  index.md
output/claude_code_qwen/: checkpoint.json  hierarchy.json  index.md
output/functional_programming_in_scala/: checkpoint.json  hierarchy.json  index.md
output/opus47/: checkpoint.json  hierarchy.json  index.md
output/the_pragmatic_programmer/: checkpoint.json
src/chunker/: checkpoint.py  cli.py  config.py  context.py  metrics.py  models.py  pipeline.py  splitter.py  state.py
tests/: conftest.py
tests/fixtures/: agentic_rag_excerpt.txt  agentic_rag_full.txt  pragm.txt
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_aggregation.py  test_checkpoint.py  test_chunking.py  test_config.py  test_context.py  test_llm_service.py  test_metrics.py  test_models.py  test_output.py  test_pipeline.py  test_state.py  (+2 more)
(+682 files in other folders)
